Java version upgraded to 22