@@ -2,7 +2,8 @@
 
 #make sure the util module is compiled before running this script
 
-java -XX:StartFlightRecording:filename=virtualThreadPinnedEvent.jfr \
+java --enable-preview --source 22 \
+-XX:StartFlightRecording:filename=virtualThreadPinnedEvent.jfr \
 -cp ../util/target/classes/ \
 src/main/java/org/jugistanbul/virtualthread/pin/ThreadPinned.java
 
