@@ -2,7 +2,8 @@
 
 #make sure the util module is compiled before running this script
 
-java -cp ../util/target/classes/ \
+java --enable-preview --source 22 \
+-cp ../util/target/classes/ \
 -Djdk.virtualThreadScheduler.parallelism=1 \
 -Djdk.virtualThreadScheduler.maxPoolSize=1 \
 -Djdk.virtualThreadScheduler.minRunnable=1 \
