@@ -2,5 +2,6 @@
 
 #make sure the util module is compiled before running this script
 
-java -cp ../util/target/classes/ \
+java --enable-preview --source 22 \
+-cp ../util/target/classes/ \
 -Djdk.tracePinnedThreads=short src/main/java/org/jugistanbul/virtualthread/pin/ThreadPinned.java
